objects/Program_Budget_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Allocation_Date__c</fullName>
        <label>Allocation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funds_Remaining__c</fullName>
        <formula>Amount__c - Funds_Spent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funds Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funds_Spent__c</fullName>
        <label>Funds Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>General_Accounting_Unit__c</fullName>
        <label>General Accounting Unit</label>
        <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
        <relationshipLabel>Program Budget Allocations</relationshipLabel>
        <relationshipName>Program_Budget_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>pmdm__Program__c</referenceTo>
        <relationshipLabel>Program Budget Allocations</relationshipLabel>
        <relationshipName>Program_Budget_Allocations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program Budget Allocation</label>
    <nameField>
        <displayFormat>PBA-{00000}</displayFormat>
        <label>Program Budget Allocation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Budget Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>